<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iTend</string>
    <string name="action_admin">Admin</string>
    <string name="action_pay">Close Tab</string>
    <string name="action_makedrink">Make A Drink</string>
    <string name="action_gethelp">Help</string>
    <string name="icon">icon</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_drink_selection">Select Drink</string>
    <string name="beer_button">Beer</string>
    <string name="wine_button">Wine</string>
    <string name="mixed_drink_button">Mixed Drink</string>
    <string name="title_activity_beer_selection">BeerSelectionActivity</string>
    <string name="title_activity_wine_selection">WineSelectionActivity</string>
    <string name="title_activity_mixed_selection">MixedSelectionActivity</string>
    <string name="title_activity_add_to_menu">Add Drink to Menu</string>
   	<string name="title_activity_pay_tab">Pay Tab</string>
    <string name="title_activity_get_help">Help</string>
    <string name="drink_description">Description</string>
    <string name="drink_name">Drink Name</string>
    <string name="drink_cost">Cost</string>
    <string name="add_drink">Add to Menu</string>
    <string name="no_beers">No beers added to system.</string>
    <string name="no_mixed">No mixed drinks added to system.</string>
    <string name="no_wines">No wines added to system.</string>
    <string name="no_drinks">No drinks on your tab.</string>
    <string name="totallabel">Total: </string>
    <string name="pay_button">Pay Tab</string>
    <string name="helptext">Help for the iTend application. 
        First, you need to select "Make A Drink." From there, you can select what type of drink you want. 
        After you have chosen a drink, the cost will be placed into your tab. 
        When you are done buying and drinking, you can select "Close Tab" to pay for your drinks.</string>
</resources>
