<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    android:layout_gravity="center"
    android:orientation="vertical"
    
    tools:context=".MainActivity"
    tools:ignore="NestedWeights" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="239dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25"
        android:contentDescription="@string/icon"
        android:src="@drawable/drink" />

    <Button
        android:id="@+id/drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_makedrink"
        android:onClick="onBuyDrink"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_pay"
        android:textColor="#FFFFFF"
        android:onClick="onPayTab" />

    <Button
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_gethelp"
        android:textColor="#FFFFFF"
        android:onClick="onGetHelp" />

</LinearLayout>