<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    android:layout_gravity="center"
    android:orientation="vertical"
    
    tools:context=".DrinkSelectionActivity" >

    <ImageView
        android:id="@+id/beerimg"
        android:layout_width="298dp"
        android:layout_height="92dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/icon"
        android:src="@drawable/beer" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/beer_button"
        android:textColor="#FFFFFF"
        android:onClick="onBeerClicked" />
    
  	<ImageView
        android:id="@+id/wineimg"
        android:layout_width="298dp"
        android:layout_height="92dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/icon"
        android:src="@drawable/wine" />
  	
    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wine_button"
        android:textColor="#FFFFFF"
        android:onClick="onWineClicked" />
    
  	<ImageView
        android:id="@+id/mixdrinkimg"
        android:layout_width="298dp"
        android:layout_height="92dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/icon"
        android:src="@drawable/mixdrink" />
  	
    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mixed_drink_button"
        android:textColor="#FFFFFF"
        android:onClick="onMixedClicked" />

</LinearLayout>